--- a/pom.xml
+++ b/pom.xml
@@ -178,6 +178,12 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
+      <exclusions>
+        <exclusion>
+        <groupId>org.junit.vintage</groupId>
+        <artifactId>junit-vintage-engine</artifactId>
+      </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.springframework.security</groupId>
@@ -268,13 +274,13 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.0.0-M7</version>
         <configuration>
-          <!--<properties>
+          <properties>
             <configurationParameters>
               junit.jupiter.execution.parallel.enabled = true
               junit.jupiter.execution.parallel.mode.default = same_thread
               junit.jupiter.execution.parallel.mode.classes.default = concurrent
             </configurationParameters>
-          </properties> -->
+          </properties>
         </configuration>
       </plugin>
       <plugin>
